# blas1_cs271

./: Makefile.in  README.md  aclocal.m4  compile_commands.json  configure  configure.ac  configure~
.cache/clangd/index/: blas.c.87DFAA7354F892AA.idx  blas.h.36B13F6C9462AA92.idx  blas.h.3D876F2B1485E998.idx  blas_ref.h.D3004B930C02E52A.idx  blas_test.h.93D996059BC9A144.idx  color.h.DD46B46BF93DBEC6.idx  main.c.1D222B554223BA38.idx  test_utils.h.093BA7FC2E3DCC26.idx  testbench.h.84F7C6958AF77D57.idx
.github/workflows/: makefile.yml
autom4te.cache/: output.0  output.1  output.3  output.4  output.5  requests  traces.0  traces.2  traces.3  traces.4  traces.5
include/: blas.h
lib/: libblas.la  libblas.so.0.0.0
src/: Makefile.am  Makefile.in
src/.deps/: libblas_la-blas.Tpo
src/asm/: asum.s  axpy.s  copy.s  dot.s  nrm2.s  scal.s  swap.s
test/: Makefile.am  Makefile.in  blas_ref.c  blas_ref.h  color.h  test_utils.c  test_utils.h  testbench.c
